# magnus108.github.io

./: .gitmodules  404.html  404.markdown  archive.html  contact.html  cv.html  cv.markdown  index.html  magnus108-github-io.cabal  site.hs
.circleci/: config.yml
404/: index.html
app/: Main.hs
css/: default.css  default.hs
cv/: index.html
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2015-12-07-tu-quoque.markdown  index.html  test.html  test.markdown
posts/california/: index.html  test.html  test.markdown
posts/california/test/: index.html
posts/test/: index.html
src/: Menu.hs
templates/: default.html
travels/: index.html
travels/california/: arrival-in-san-diego.markdown  back-from-los-angeles.markdown  balboa-park-and-hillcrest.markdown  baseball.markdown  chill-day.markdown  chill-games-and-beer.markdown  coronado.markdown  even-more-chill-day.markdown  first-week.markdown  flamingo.markdown  hike-in-joshua-tree.markdown  hollywood.markdown  holocaust-day.markdown  index.html  into-the-wild.markdown  joshua-tree.markdown  last-day.markdown  los-angeles.markdown  more-chill.markdown  old-town.markdown  safari-park.markdown  san-diego-zoo.markdown  scripps.markdown  second-taco-tuesday.markdown  sleepless-in-seattle.markdown  taco-tuesday.markdown  the-mexico-border.markdown  ucsd.markdown  uss-midway-museum.markdown  welcome-home.markdown  wine-wednesday.markdown
travels/california/arrival-in-san-diego/: index.html
travels/california/back-from-los-angeles/: index.html
travels/california/balboa-park-and-hillcrest/: index.html
travels/california/baseball/: index.html
travels/california/chill-day/: index.html
travels/california/chill-games-and-beer/: index.html
travels/california/coronado/: index.html
travels/california/even-more-chill-day/: index.html
travels/california/first-week/: index.html
travels/california/flamingo/: index.html
travels/california/hike-in-joshua-tree/: index.html
(+20 files in other folders)
