name:               magnus108-github-io
version:            0.1.0.0
homepage:           https://magnus108.github.io
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
  ghc-options:      -threaded
  default-language: Haskell2010
