name:               magnus108-github-io
version:            0.1.0.0
homepage:           https://magnus108.github.io
build-type:         Simple
cabal-version:      >= 1.18

library
  hs-source-dirs:   src
  exposed-modules:  Menu
  build-depends:    base == 4.*
                  , filepath == 1.4.*
                  , MissingH == 1.4.*
                  , containers == 0.5.*
                  , blaze-html == 0.9.*
                  , blaze-markup == 0.8.*
                  , hakyll == 4.9.*
  default-language: Haskell2010

executable site
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    magnus108-github-io
                  , base == 4.*
                  , binary == 0.8.*
                  , filepath == 1.4.*
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010
